maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:32: error: ':' expected but ')' found.
def isDirectionFree(dir) : Boolean =
                       ^Escaper:48: error: identifier expected but '}' found.
}
^